--- a/MediaBrowser.ServerApplication/packages.config
+++ b/MediaBrowser.ServerApplication/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Playlists.NET" version="1.2.0" targetFramework="net462" />
   <package id="ServiceStack.Text" version="4.5.8" targetFramework="net462" />
   <package id="SharpCompress" version="0.18.2" targetFramework="net462" />
   <package id="SimpleInjector" version="4.0.12" targetFramework="net462" />
